<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.ds.quandoo</groupId>
  <artifactId>quandoo-ta</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>web-test</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>1.8</java.version>
    <junit.version>4.13.2</junit.version>
    <cucumber.version>7.0.0</cucumber.version>
    <selenium.version>3.141.59</selenium.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-junit</artifactId>
      <version>${cucumber.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-core</artifactId>
      <version>${cucumber.version}</version>
    </dependency>
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-java8</artifactId>
      <version>${cucumber.version}</version>
    </dependency>
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-picocontainer</artifactId>
      <version>${cucumber.version}</version>
    </dependency>
    <dependency>
      <groupId>com.jayway.restassured</groupId>
      <artifactId>rest-assured</artifactId>
      <version>2.9.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.9.0</version>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium.version}</version>
    </dependency>
      <dependency>
          <groupId>com.github.javafaker</groupId>
          <artifactId>javafaker</artifactId>
          <version>1.0.2</version>
      </dependency>
      <dependency>
          <groupId>org.hamcrest</groupId>
          <artifactId>hamcrest-all</artifactId>
          <version>1.3</version>
          <scope>test</scope>
      </dependency>
  </dependencies>

  <build>
    <testSourceDirectory>src/test/java</testSourceDirectory>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.8.1</version>
              <configuration>
                  <release>14</release>
                  <compilerArgs>--enable-preview</compilerArgs>
              </configuration>
          </plugin>
          <plugin>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>2.22.2</version>
              <configuration>
                  <argLine>--enable-preview</argLine>
              </configuration>
          </plugin>
      </plugins>
  </build>

  <!-- profiles -->
  <profiles>
    <profile>
      <id>firefox</id>
      <properties>
        <browser.name>firefox</browser.name>
        <site.url>http://the-internet.herokuapp.com/</site.url>
        <driver.path>/src/main/resources/drivers/geckodriver</driver.path>
      </properties>
    </profile>
      <profile>
          <id>firefox_headless</id>
          <properties>
              <browser.name>firefox_headless</browser.name>
              <site.url>http://the-internet.herokuapp.com/</site.url>
              <driver.path>/src/main/resources/drivers/geckodriver</driver.path>
          </properties>
      </profile>
    <profile>
      <id>chrome</id>
      <properties>
        <browser.name>chrome</browser.name>
        <site.url>http://the-internet.herokuapp.com/</site.url>
        <driver.path>/src/main/resources/drivers/chromedriver</driver.path>
      </properties>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
    </profile>
      <profile>
          <id>chrome_headless</id>
          <properties>
              <browser.name>chrome_headless</browser.name>
              <site.url>http://the-internet.herokuapp.com/</site.url>
              <driver.path>/src/main/resources/drivers/chromedriver</driver.path>
          </properties>
      </profile>
  </profiles>
</project>

